gen/remotebuildexecution/v1alpha/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-remotebuildexecution1_alpha v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/remotebuildexecution/v1alpha/lib)
error[E0423]: expected value, found struct `instances::InstancesActions`
    --> gen/remotebuildexecution/v1alpha/lib/src/lib.rs:2963:13
     |
2963 |             instances::InstancesActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `instances::InstancesActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/remotebuildexecution/v1alpha/lib/src/lib.rs:2967:13
     |
2967 |             operations::OperationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `workerpools::WorkerpoolsActions`
    --> gen/remotebuildexecution/v1alpha/lib/src/lib.rs:3060:17
     |
3060 |                 workerpools::WorkerpoolsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `workerpools::WorkerpoolsActions { /* fields */ }`?

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-remotebuildexecution1_alpha`.

To learn more, run the command again with --verbose.
